...
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        // Настраиваем WebView
        webView.navigationDelegate = self  // Устанавливаем себя делегатом навигации
        presenter?.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        
        // Добавляем наблюдатель за изменением прогресса загрузки
...
